# agents

./: .claudeignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  agent_guidelines.md  antigravity_optimization_checklist.md  harness_synthesis_report.md
.agents/skills/sandbox_python_executor/: SKILL.md
config/: config.json
docs/: ARCHITECTURE.md  TODO.md
docs/decisions/: 2026-06-28-telegram-bridge-design.md
docs/templates/: ADR.template.md  ARCHITECTURE.template.md  DONE.template.md  TODO.template.md  pre-commit-config.yaml
scripts/: bootstrap.sh  context.sh  pre-commit
telegram-bridge/: .env.example  hooks.json  pyproject.toml  sidecar.json  topic_mappings.json
telegram-bridge/src/: __init__.py  agent_manager.py  bot.py  config.py  logger.py  main.py
telegram-bridge/src/telegram_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
telegram-bridge/tests/: __init__.py  test_agent_manager.py  test_bot.py  test_config.py
